[package]
name = "qvd_utils"
version = "0.1.0"
authors = ["Sam Bentley <samtbentley@gmail.com>"]
edition = "2018"

[lib]
name = "qvd"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
quick-xml = { version = "0.20.0", features = ["serialize"]}
byteorder = "1.3.4"
bitvec = "0.19.4"

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]

