[package]
name = "qvd"
version = "0.0.4"
authors = ["Sam Bentley <samtbentley@gmail.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "qvd"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
quick-xml = { version = "0.20.0", features = ["serialize"]}
byteorder = "1.3.4"
bitvec = "0.19.4"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["pandas~=1.1.4"]